--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@types/koa-static": "^4.0.1",
     "@types/typescript": "^2.0.0",
     "@types/validator": "^13.1.3",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "global": "^4.4.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-logger": "^3.2.1",
