--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/server.js",
     "dev-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/server.ts",
     "tsc": "tsc -p tsconfig.json",
-    "test": "jest"
+    "test": "jest --verbose --forceExit --detectOpenHandles --maxWorkers=1"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/bridgefy/victor-backend#readme",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@types/koa-static": "^4.0.1",
     "@types/typescript": "^2.0.0",
     "@types/validator": "^13.1.3",
@@ -43,15 +44,39 @@
     "mongoose": "^5.12.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.21",
     "@types/koa": "^2.13.1",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.42",
     "@types/mongodb": "^3.3.7",
     "@types/mongoose": "^5.5.28",
     "@types/node": "^12.12.14",
+    "faker": "^5.4.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
+  },
+  "jest": {
+    "verbose": false,
+    "roots": [
+      "<rootDir>/__tests__"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testEnvironment": "node",
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
